Fix squats ui overlapping the "get ready" prompt

--- a/code/ui/Microgames/MicrogameUiSquats.scss
+++ b/code/ui/Microgames/MicrogameUiSquats.scss
@@ -2,7 +2,7 @@
 MicrogameUiSquats
 {
   position: absolute;
-  height: 20%;
+  height: 16%;
   aspect-ratio: 1;
   bottom: 2%;
   left: 50%;
